--- a/.github/workflows/PUSH-OTHER.yml
+++ b/.github/workflows/PUSH-OTHER.yml
@@ -5,8 +5,21 @@ on:
     branches-ignore: master
 
 jobs:
+  lint:
+    name: Run linters
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v2
+
+      - name: Docker Lint
+        uses: luke142367/Docker-Lint-Action@v1.0.0
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
   build:
     name: Build image
+    needs: lint
     runs-on: ubuntu-latest
     steps:
       - name: Checkout repository
@@ -14,7 +27,6 @@ jobs:
 
       - name: Build Docker image
         env:
-          DOCKER_TOKEN: ${{ secrets.DOCKER_TOKEN }}
           TERM: xterm-256color
         run: make build
 
@@ -25,13 +37,51 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v1 # Needs to be in v1 version otherwise will not work with pull-request@v2
 
+      - name: Read the template - bug (conditional)
+        if: startsWith(github.ref, 'refs/heads/bug')
+        id: pr-template-bug
+        uses: juliangruber/read-file-action@v1
+        with:
+          path: ./.github/PULL_REQUEST_TEMPLATE/BUG.md
+
+      - name: Read the template - enhancement (conditional)
+        if: startsWith(github.ref, 'refs/heads/enhancement')
+        id: pr-template-enhancement
+        uses: juliangruber/read-file-action@v1
+        with:
+          path: ./.github/PULL_REQUEST_TEMPLATE/ENHANCEMENT.md
+
+      - name: Read the template - documentation (conditional)
+        if: startsWith(github.ref, 'refs/heads/documentation')
+        id: pr-template-documentation
+        uses: juliangruber/read-file-action@v1
+        with:
+          path: ./.github/PULL_REQUEST_TEMPLATE/DOCUMENTATION.md
+
+      - name: Read the template - other (conditional)
+        if: startsWith(github.ref, '!refs/heads/documentation') && startsWith(github.ref, '!refs/heads/enhancement')
+        id: pr-template-other
+        uses: juliangruber/read-file-action@v1
+        with:
+          path: ./.github/PULL_REQUEST_TEMPLATE/ENHANCEMENT.md
+
+      - name: Create pull request - bug (conditional)
+        if: startsWith(github.ref, 'refs/heads/bug')
+        uses: repo-sync/pull-request@v2
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          pr_label: "auto,bug"
+          pr_body: "{{ steps.pr-template-bug.outputs.content }}"
+          pr_title: "${{ github.event.commits[0].message }}"
+          pr_assignee: "${{ github.actor }}"
+
       - name: Create pull request - enhancement (conditional)
         if: startsWith(github.ref, 'refs/heads/enhancement')
         uses: repo-sync/pull-request@v2
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           pr_label: "auto,enhancement"
-          pr_body: "*Automated pull request*"
+          pr_body: "${{ steps.pr-template-enhancement.outputs.content }}"
           pr_title: "${{ github.event.commits[0].message }}"
           pr_assignee: "${{ github.actor }}"
 
@@ -41,7 +91,7 @@ jobs:
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           pr_label: "auto,documentation"
-          pr_body: "*Automated pull request*"
+          pr_body: "${{ steps.pr-template-documentation.outputs.content }}"
           pr_title: "${{ github.event.commits[0].message }}"
           pr_assignee: "${{ github.actor }}"
 
@@ -50,7 +100,7 @@ jobs:
         uses: repo-sync/pull-request@v2
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
-          pr_label: "auto"
-          pr_body: "*Automated pull request*"
+          pr_label: "auto,enhancement"
+          pr_body: "${{ steps.pr-template-other.outputs.content }}"
           pr_title: "${{ github.event.commits[0].message }}"
           pr_assignee: "${{ github.actor }}"
