--- a/.github/ISSUE_TEMPLATE/config.yml
+++ b/.github/ISSUE_TEMPLATE/config.yml
@@ -1,8 +1,8 @@
 blank_issues_enabled: false
 contact_links:
   - name: Contributiong details
-    url: https://github.com/ChristophShyper/docker-okta-aws-sso/blob/master/.github/CONTRIBUTING.md
-    about: Details about controbuting rules.
+    url: https://github.com/devops-infra/template-action/blob/master/.github/CONTRIBUTING.md
+    about: Details about contributing rules
   - name: Code of Conduct
-    url: https://github.com/ChristophShyper/docker-okta-aws-sso/blob/master/.github/CODE_OF_CONDUCT.md
-    about: Details about Code of Conduct.
+    url: https://github.com/devops-infra/template-action/blob/master/.github/CODE_OF_CONDUCT.md
+    about: Details about Code of Conduct
