--- a/.github/workflows/PUSH-MASTER.yml
+++ b/.github/workflows/PUSH-MASTER.yml
@@ -5,12 +5,24 @@ on:
     branches: master
 
 jobs:
+  labels:
+    name: Update repo labels
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@master
+
+      - name: Update labels
+        uses: crazy-max/ghaction-github-labeler@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
   build_and_push:
     name: Build and push image
     runs-on: ubuntu-latest
     steps:
       - name: Checkout repository
-        uses: actions/checkout@v2
+        uses: actions/checkout@master
 
       - name: Build Docker image and push to registry
         env:
