--- a/.github/workflows/PUSH-MASTER.yml
+++ b/.github/workflows/PUSH-MASTER.yml
@@ -2,7 +2,8 @@ name: Push to master
 
 on:
   push:
-    branches: master
+    branches:
+      - master
 
 jobs:
   labels:
@@ -10,22 +11,23 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout repository
-        uses: actions/checkout@master
+        uses: actions/checkout@v2.3.4
 
       - name: Update labels
-        uses: crazy-max/ghaction-github-labeler@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        uses: crazy-max/ghaction-github-labeler@v3.1.1
+        with:
+          github-token: ${{ secrets.GITHUB_TOKEN }}
 
   build_and_push:
     name: Build and push image
     runs-on: ubuntu-latest
     steps:
       - name: Checkout repository
-        uses: actions/checkout@master
+        uses: actions/checkout@v2.3.4
 
       - name: Build Docker image and push to registry
         env:
           DOCKER_TOKEN: ${{ secrets.DOCKER_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           TERM: xterm-256color
         run: make build push
