--- a/.github/workflows/PUSH-OTHER.yml
+++ b/.github/workflows/PUSH-OTHER.yml
@@ -12,21 +12,20 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout repository
-        uses: actions/checkout@master
+        uses: actions/checkout@v2.3.4
 
       - name: Update labels - dry run
-        uses: crazy-max/ghaction-github-labeler@v1
+        uses: crazy-max/ghaction-github-labeler@v3.1.1
         with:
-          dry_run: true
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          github-token: ${{ secrets.GITHUB_TOKEN }}
+          dry-run: true
 
   build:
     name: Build image
     runs-on: ubuntu-latest
     steps:
       - name: Checkout repository
-        uses: actions/checkout@master
+        uses: actions/checkout@v2.3.4
 
       - name: Build Docker image
         env:
@@ -38,45 +37,28 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout repository
-        uses: actions/checkout@master
-
-      - name: Create pull request - dependency (conditional)
-        if: startsWith(github.ref, 'refs/heads/dependency')
-        uses: devops-infra/action-pull-request@master
+        uses: actions/checkout@v2.3.4
         with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          title: "${{ github.event.commits[0].message }}"
-          assignee: "${{ github.actor }}"
-          label: automatic,dependency
-          template: .github/PULL_REQUEST_TEMPLATE/DEPENDENCY.md
-          old_string: "<!-- Write you description here -->"
-          new_string: "${{ github.event.commits[0].message }}"
-          get_diff: true
+          fetch-depth: 0
 
       - name: Create pull request - bugfix (conditional)
         if: startsWith(github.ref, 'refs/heads/bugfix')
         uses: devops-infra/action-pull-request@master
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
-          title: "${{ github.event.commits[0].message }}"
-          assignee: "${{ github.actor }}"
-          label: automatic,bugfix
-          template: .github/PULL_REQUEST_TEMPLATE/BUGFIX.md
-          old_string: "<!-- Write you description here -->"
-          new_string: "${{ github.event.commits[0].message }}"
+          assignee: ${{ github.actor }}
+          label: bugfix
+          template: .github/PULL_REQUEST_TEMPLATE.md
           get_diff: true
 
-      - name: Create pull request - feature (conditional)
-        if: startsWith(github.ref, 'refs/heads/feature')
+      - name: Create pull request - dependency (conditional)
+        if: startsWith(github.ref, 'refs/heads/dependency')
         uses: devops-infra/action-pull-request@master
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
-          title: "${{ github.event.commits[0].message }}"
-          assignee: "${{ github.actor }}"
-          label: automatic,feature
-          template: .github/PULL_REQUEST_TEMPLATE/FEATURE.md
-          old_string: "<!-- Write you description here -->"
-          new_string: "${{ github.event.commits[0].message }}"
+          assignee: ${{ github.actor }}
+          label: dependency
+          template: .github/PULL_REQUEST_TEMPLATE.md
           get_diff: true
 
       - name: Create pull request - documentation (conditional)
@@ -84,23 +66,39 @@ jobs:
         uses: devops-infra/action-pull-request@master
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
-          title: "${{ github.event.commits[0].message }}"
-          assignee: "${{ github.actor }}"
-          label: automatic,documentation
-          template: .github/PULL_REQUEST_TEMPLATE/DOCUMENTATION.md
-          old_string: "<!-- Write you description here -->"
-          new_string: "${{ github.event.commits[0].message }}"
+          assignee: ${{ github.actor }}
+          label: documentation
+          template: .github/PULL_REQUEST_TEMPLATE.md
           get_diff: true
 
-      - name: Create pull request - other (conditional)
-        if: startsWith(github.ref, '!refs/heads/dependency') && startsWith(github.ref, '!refs/heads/bugfix') && startsWith(github.ref, '!refs/heads/feature') && startsWith(github.ref, '!refs/heads/documentation')
+      - name: Create pull request - feature (conditional)
+        if: startsWith(github.ref, 'refs/heads/feature')
         uses: devops-infra/action-pull-request@master
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
-          title: "${{ github.event.commits[0].message }}"
-          assignee: "${{ github.actor }}"
-          label: automatic,feature
-          template: .github/PULL_REQUEST_TEMPLATE/FEATURE.md
-          old_string: "<!-- Write you description here -->"
-          new_string: "${{ github.event.commits[0].message }}"
+          assignee: ${{ github.actor }}
+          label: feature
+          template: .github/PULL_REQUEST_TEMPLATE.md
+          get_diff: true
+
+      - name: Create pull request - test (conditional)
+        if: startsWith(github.ref, 'refs/heads/test')
+        uses: devops-infra/action-pull-request@master
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          assignee: ${{ github.actor }}
+          reviewer: ${{ github.actor }}
+          label: test
+          template: .github/PULL_REQUEST_TEMPLATE.md
+          draft: true
+          get_diff: true
+
+      - name: Create pull request - other (conditional)
+        if: "!startsWith(github.ref, 'refs/heads/bugfix') && !startsWith(github.ref, 'refs/heads/dependabot') && !startsWith(github.ref, 'refs/heads/dependency') && !startsWith(github.ref, 'refs/heads/documentation')  && !startsWith(github.ref, 'refs/heads/feature') && !startsWith(github.ref, 'refs/heads/test')"
+        uses: devops-infra/action-pull-request@master
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          assignee: ${{ github.actor }}
+          label: feature
+          template: .github/PULL_REQUEST_TEMPLATE.md
           get_diff: true
