--- a/.github/workflows/weekly-dependency-check.yml
+++ b/.github/workflows/weekly-dependency-check.yml
@@ -14,6 +14,7 @@ jobs:
         uses: actions/checkout@v5
         with:
           fetch-depth: 0
+          fetch-tags: true
 
       - name: Get latest release tag
         id: latest-tag
